Address home page nav alignment issue

--- a/css/src/college-template-aglifesciences.scss
+++ b/css/src/college-template-aglifesciences.scss
@@ -315,6 +315,7 @@ $large-up: "#{only screen} and (min-width: #{$breakpoint-large})";
 
       ul {
         position: relative;
+        text-align: left;
       }
     }
     .site-title {
